Rolling back r489734 - Boolean.valueOf(boolean) only available from JDK 1.4 onwards
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/proper/lang/trunk@490161 13f79535-47bb-0310-9956-ffa450edef68